--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <meta charset="UTF-8">
@@ -48,14 +47,14 @@
 <!--会议论文-->
 <h3>Conference Papers:</h3>
 <ul> 
-	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Disentangled%20Representation%20for%20Long-tail%20Senses%20of%20Word%20Sense%20Disambiguation-CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> CIKM 2022.</li>
-	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Bi-matching%20Mechanism%20to%20Combat%20Long-tail%20Senses%20of%20Word%20Sense%20Disambiguation-ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML-PKDD 2022.</li>
-	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Feedforward%20Neural%20Network%20Reconstructed%20from%20High-order%20Quantum%20Systems-IJCNN2022.pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> IJCNN 2022.</li>
-	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Neural%20Network%20Model%20Reconstructed%20from%20Entangled%20Quantum%20States-IJCNN2022.pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> IJCNN 2022.</li>
-	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Quantum%20Entanglement%20Inspired%20Correlation%20Learning%20for%20Classification-PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> PAKDD 2022.</li>
-  	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Quantum%20Correlation%20Revealed%20by%20Bell%20State%20for%20Classification%20Tasks-IJCNN2021.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> IJCNN 2021.</li>
-  	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Interactive%20Quantum%20Classifier%20Inspired%20by%20Quantum%20Open%20System%20Theory-IJCNN2021.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> IJCNN 2021.</li>
-	<li><b>Junwei Zhang</b>, Yuexian Hou et al. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Strong%20Statistical%20Correlation%20Revealed%20by%20Quantum%20Entanglement%20for%20Supervised%20Learning-ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> ECAI 2020.</li>
+	<li><b>Junwei Zhang</b>, Ruifang He et al. Disentangled Representation for Long-tail Senses of Word Sense Disambiguation. CIKM 2022.</li>
+	<li><b>Junwei Zhang</b>, Ruifang He et al. Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation. ECML-PKDD 2022.</li>
+	<li><b>Junwei Zhang</b>, Zhao Li et al. Feedforward Neural Network Reconstructed from High-order Quantum Systems. IJCNN 2022.</li>
+	<li><b>Junwei Zhang</b>, Zhao Li et al. Neural Network Model Reconstructed from Entangled Quantum States. IJCNN 2022.</li>
+	<li><b>Junwei Zhang</b>, Zhao Li et al. Quantum Entanglement Inspired Correlation Learning for Classification. PAKDD 2022.</li>
+  	<li><b>Junwei Zhang</b>, Ruifang He et al. Quantum Correlation Revealed by Bell State for Classification Tasks. IJCNN 2021.</li>
+  	<li><b>Junwei Zhang</b>, Zhao Li et al. Interactive Quantum Classifier Inspired by Quantum Open System Theory. IJCNN 2021.</li>
+	<li><b>Junwei Zhang</b>, Yuexian Hou et al. Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning. ECAI 2020.</li>
 
 	<li>Peng Guo, <b>Junwei Zhang</b> et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. ICTAI 2019.</li>
 	<li>Xiang Li, Zhigang Zhao et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. BIBM 2019.</li>
@@ -83,7 +82,7 @@
 
 <!--底部-->
 <hr style="margin-top: 100px;">
-<p align="center" style="font-size: 14px">Copyright: Junwei Zhang &emsp;&emsp; Email: junwei@tju.edu.cn</p>
+<p align="center" style="font-size: 14px">Copyright: Junwei Zhang &emsp;&emsp; Email: junwei@tju.edu.cn &emsp;&emsp; Website: qnlp.github.io</p>
 
 
 	
