--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!--期刊论文-->
 <h3>Journal Papers:</h3>
 <ul>
-  	<li><b>Junwei Zhang</b>, Zhao Li. <a style="text-decoration: none;" href="https://yboy0329.github.io/papers/Quantum%20Contextuality%20for%20Training%20Neural%20Networks-CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> CJE 2020.</li>
+  	<li><b>Junwei Zhang</b>, Zhao Li. Quantum Contextuality for Training Neural Networks. CJE 2020.</li>
 </ul>	
 
 
