--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
 <!--会议论文-->
 <h3>Conference Papers:</h3>
 <ul> 
-	<li><b>Junwei Zhang</b>, Ruifang He et al. Disentangled Representation for Long-tail Senses of Word Sense Disambiguation. CIKM 2022.</li>
-	<li><b>Junwei Zhang</b>, Ruifang He et al. Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation. ECML-PKDD 2022.</li>
+	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> CIKM 2022.</li>
+	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML-PKDD 2022.</li>
 	<li><b>Junwei Zhang</b>, Zhao Li et al. Feedforward Neural Network Reconstructed from High-order Quantum Systems. IJCNN 2022.</li>
 	<li><b>Junwei Zhang</b>, Zhao Li et al. Neural Network Model Reconstructed from Entangled Quantum States. IJCNN 2022.</li>
 	<li><b>Junwei Zhang</b>, Zhao Li et al. Quantum Entanglement Inspired Correlation Learning for Classification. PAKDD 2022.</li>
   	<li><b>Junwei Zhang</b>, Ruifang He et al. Quantum Correlation Revealed by Bell State for Classification Tasks. IJCNN 2021.</li>
   	<li><b>Junwei Zhang</b>, Zhao Li et al. Interactive Quantum Classifier Inspired by Quantum Open System Theory. IJCNN 2021.</li>
-	<li><b>Junwei Zhang</b>, Yuexian Hou et al. Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning. ECAI 2020.</li>
+	<li><b>Junwei Zhang</b>, Yuexian Hou et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> ECAI 2020.</li>
 
 	<li>Peng Guo, <b>Junwei Zhang</b> et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. ICTAI 2019.</li>
 	<li>Xiang Li, Zhigang Zhao et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. BIBM 2019.</li>
@@ -65,7 +65,7 @@
 <!--期刊论文-->
 <h3>Journal Papers:</h3>
 <ul>
-  	<li><b>Junwei Zhang</b>, Zhao Li. Quantum Contextuality for Training Neural Networks. CJE 2020.</li>
+  	<li><b>Junwei Zhang</b>, Zhao Li. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> CJE 2020.</li>
 </ul>	
 
 
