--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
 <ul> 
 	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> CIKM 2022.</li>
 	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML-PKDD 2022.</li>
-	<li><b>Junwei Zhang</b>, Zhao Li et al. Feedforward Neural Network Reconstructed from High-order Quantum Systems. IJCNN 2022.</li>
-	<li><b>Junwei Zhang</b>, Zhao Li et al. Neural Network Model Reconstructed from Entangled Quantum States. IJCNN 2022.</li>
-	<li><b>Junwei Zhang</b>, Zhao Li et al. Quantum Entanglement Inspired Correlation Learning for Classification. PAKDD 2022.</li>
-  	<li><b>Junwei Zhang</b>, Ruifang He et al. Quantum Correlation Revealed by Bell State for Classification Tasks. IJCNN 2021.</li>
-  	<li><b>Junwei Zhang</b>, Zhao Li et al. Interactive Quantum Classifier Inspired by Quantum Open System Theory. IJCNN 2021.</li>
+	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/IJCNN2022(2).pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> IJCNN 2022.</li>
+	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/IJCNN2022(1).pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> IJCNN 2022.</li>
+	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> PAKDD 2022.</li>
+  	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/IJCNN2021(2).pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> IJCNN 2021.</li>
+  	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/IJCNN2021(1).pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> IJCNN 2021.</li>
 	<li><b>Junwei Zhang</b>, Yuexian Hou et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> ECAI 2020.</li>
 
 	<li>Peng Guo, <b>Junwei Zhang</b> et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. ICTAI 2019.</li>
