--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 <!--底部-->
 <hr style="margin-top: 100px;">
-<p align="center" style="font-size: 14px">Copyright: Junwei Zhang &emsp;&emsp; Email: junwei@tju.edu.cn &emsp;&emsp; Website: qnlp.github.io</p>
+<p align="center" style="font-size: 14px">Copyright: Junwei Zhang &emsp; Email: junwei@tju.edu.cn &emsp; Website: qnlp.github.io</p>
 
 
 	
