--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 <title>Junwei Zhang's Homepage</title>
 <link rel="shortcut icon" href="https://qnlp.github.io/favicon.ico" type="image/x-icon">
 
-
+	
+	
 <body>
-
-
 <!--头部-->
 <h1 align="center">Welcome to Junwei Zhang's Homepage!</h1>
 
@@ -26,11 +25,17 @@
 
 <!--教育背景-->
 <h3>Education Experience:</h3>
-<table border="0" style="text-indent: 2em;">
-	<tr><td>2017.9 - now:</td><td>Ph.D student,</td><td>Tianjin University, China.</td></tr>
-	<tr><td>2015.9 - 2017.6:</td><td>Master,</td><td>Harbin University of Commerce, China.</td></tr>
-	<tr><td>2009.9 - 2014.6:</td><td>Bachelor,</td><td>Tiangong University, China.</td></tr>
-</table>
+<div style="display: grid; grid-template-columns: auto auto 1fr; text-indent: 2em;">
+	<div>2017.9 - Now:</div>
+	<div>Ph.D student,</div>
+	<div>Tianjin University, China.</div>
+	<div>2015.9 - 2017.6:</div>
+	<div>Master,</div>
+	<div>Harbin University of Commerce, China.</div>
+	<div>2009.9 - 2014.6:</div>
+	<div>Bachelor,</div>
+	<div>Tiangong University, China.</div>
+</div>
 
 
 	
