--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 <!--教育背景-->
 <h3>Education Experience:</h3>
-<div style="display: grid; grid-template-columns: auto auto 1fr; text-indent: 2em;">
+<div style="display: grid; grid-template-columns: auto auto 1fr; text-indent: 2em; font-size: 16px;">
 	<div>2017.9 - Now:</div>
 	<div>Ph.D student,</div>
 	<div>Tianjin University, China.</div>
