--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
 <meta charset="UTF-8">
 <title>Junwei Zhang's Homepage</title>
 <link rel="shortcut icon" href="https://qnlp.github.io/favicon.ico" type="image/x-icon">
-
-	
-	
 <body>
 <!--头部-->
 <h1 align="center">Welcome to Junwei Zhang's Homepage!</h1>
@@ -26,15 +23,15 @@
 <!--教育背景-->
 <h3>Education Experience:</h3>
 <div style="display: grid; grid-template-columns: auto auto 1fr; text-indent: 2em; font-size: 16px;">
-	<div>2017.9 - Now:</div>
-	<div>Ph.D student,</div>
-	<div>Tianjin University, China.</div>
-	<div>2015.9 - 2017.6:</div>
-	<div>Master,</div>
-	<div>Harbin University of Commerce, China.</div>
-	<div>2009.9 - 2014.6:</div>
-	<div>Bachelor,</div>
-	<div>Tiangong University, China.</div>
+	<span>2017.9 - Now:</span>
+	<span>Ph.D student,</span>
+	<span>Tianjin University, China.</span>
+	<span>2015.9 - 2017.6:</span>
+	<span>Master,</span>
+	<span>Harbin University of Commerce, China.</span>
+	<span>2009.9 - 2014.6:</span>
+	<span>Bachelor,</span>
+	<span>Tiangong University, China.</span>
 </div>
 
 
