--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <meta charset="UTF-8">
 <title>Junwei Zhang's Homepage</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <link rel="shortcut icon" href="https://qnlp.github.io/favicon.ico" type="image/x-icon">
 <body>
 <!--头部-->
@@ -22,7 +23,7 @@
 
 <!--教育背景-->
 <h3>Education Experience:</h3>
-<div style="display: grid; grid-template-columns: auto auto 1fr; text-indent: 2em; font-size: 16px;">
+<div style="display: grid; grid-template-columns: auto auto 1fr; text-indent: 2em;">
 	<span>2017.9 - Now:</span>
 	<span>Ph.D student,</span>
 	<span>Tianjin University, China.</span>
