--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 <ul>
   	<li>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. No.2022111313837.</li>
 	<li>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. No.2022112652797.</li>
+	<li>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. No.2022112652000.</li>
 </ul>	
 
 
