--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <ul> 
 	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> AAAI 2023.</li>
 	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> CIKM 2022.</li>
-	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML/PKDD 2022.</li>
+	<li><b>Junwei Zhang</b>, Ruifang He et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML-PKDD 2022.</li>
 	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/IJCNN2022(2).pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> IJCNN 2022.</li>
 	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/IJCNN2022(1).pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> IJCNN 2022.</li>
 	<li><b>Junwei Zhang</b>, Zhao Li et al. <a style="text-decoration: none;" href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> PAKDD 2022.</li>
