--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@ section{
 	line-height: 25px;
 	padding: 0px var(--section-padding);
 }
+section > div{
+	font-size: 16px;
+	line-height: 25px;
+}
 #Personal_Information{
 	text-indent: 2em;
 	text-align: justify;
