--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@ section > div{
 	#Education_Experience > .begin{
 		display: list-item;
 	}
+	#Education_Experience > .center{
+		text-indent: 1em;
+	}
 	#Education_Experience > .end{
 		grid-column-start: 1;
   		grid-column-end: 3;
