--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@ section{
 section > div{
 	font-size: 16px;
 	line-height: 25px;
+	-webkit-text-size-adjust : 100% ;
+	-moz-text-size-adjust : 100% ;
+	-ms-text-size-adjust : 100% ;
+	text-size-adjust : 100%;
 }
 #Personal_Information{
 	text-indent: 2em;
