--- a/index.html
+++ b/index.html
@@ -4,164 +4,13 @@
 <title>Junwei Zhang's Homepage</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <link rel="shortcut icon" href="https://qnlp.github.io/favicon.ico" type="image/x-icon">
-
-<style type="text/css">
-@media only screen and (max-width: 700px) {
-	:root{
-		--nav-padding: 15px;
-		--section-padding: 30px;
-	}
-}
-@media only screen and (min-width: 700px) {
-	:root{
-		--nav-padding: 30px;
-		--section-padding: 50px;
-	}
-}
-*{
-	margin: 0px;
-	padding: 0px;
-}
-a{
-	text-decoration: none;
-}
-html{
-	background-color: silver;
-}
-body{
-	background-color: white;
-	margin: 0px auto;
-	max-width: 1000px;
-	-webkit-text-size-adjust : 100% ;
-	-moz-text-size-adjust : 100% ;
-	-ms-text-size-adjust : 100% ;
-	text-size-adjust : 100%;
-}
-header{
-	border-bottom: 0px solid silver;
-}
-header > img{
-	display: block;
-	width: 100%;
-	height: auto;
-}
-nav{
-	line-height: 60px;
-	font-size: 20px;
-	font-weight: bolder;
-	padding: 0px var(--nav-padding);
-	padding-top: 20px;
-}
-section{
-	font-size: 16px;
-	line-height: 25px;
-	padding: 0px var(--section-padding);
-}
-section > div{
-	font-size: 16px;
-	line-height: 25px;
-}
-#Personal_Information{
-	text-indent: 2em;
-	text-align: justify;
-}
-@media only screen and (max-width: 700px) {
-	#Education_Experience{
-		display: grid; 
-		grid-template-columns: auto 1fr; 
-		list-style-type: disc;
-		list-style-position: inside;		
-	}
-	#Education_Experience > .begin{
-		display: list-item;
-	}
-	#Education_Experience > .center{
-		text-indent: 1em;
-	}
-	#Education_Experience > .end{
-		grid-column-start: 1;
-  		grid-column-end: 3;
-  		text-indent: 1.3em;
-	}
-}
-@media only screen and (min-width: 700px) {
-	#Education_Experience{
-		display: grid; 
-		grid-template-columns: auto auto 1fr; 
-		list-style-type: disc;
-		list-style-position: inside;
-	}
-	#Education_Experience > .begin{
-		display: list-item;
-	}
-	#Education_Experience > .center, .end{
-		text-indent: 2em;
-	}
-}
-#Research_Interests{
-	list-style-type: disc;
-	list-style-position: inside;
-}
-#Research_Interests > div{
-	display: list-item;
-}
-#Conference_Papers{
-	list-style-type: disc;
-	list-style-position: inside;
-}
-#Conference_Papers > div{
-	display: list-item;
-	text-align: justify;
-	padding: 5px 0px;
-}
-#Journal_Papers{
-	list-style-type: disc;
-	list-style-position: inside;
-}
-#Journal_Papers > div{
-	display: list-item;
-	text-align: justify;
-	padding: 5px 0px;
-}
-#Patents{
-	list-style-type: disc;
-	list-style-position: inside;
-}
-#Patents > div{
-	display: list-item;
-	text-align: justify;
-	padding: 5px 0px;
-}
-footer{
-	text-align: center;
-	font-size: 12px;
-	line-height: 60px;
-	border-top: 1px solid silver;
-	margin-top: 150px;
-}
-footer > i{
-	font-style: normal;
-}
-@media only screen and (max-width: 700px) {
-	footer > i{
-		display: none;
-	}
-}
-@media only screen and (min-width: 700px) {
-	footer > i{
-		display: ;
-	}
-}
-
-</style>
-
-
+<link rel="stylesheet" href="https://qnlp.github.io/main.css" type="text/css" >
 <body>
 
 
 <!--主页头部-->
 <header>
-<img src="./banner.png">
+<img src="https://qnlp.github.io/banner.png">
 </header>
 
 
