--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <section id="Patents">
 	<div>贺瑞芳, <b>张俊伟</b>: 一种融合定义与场景匹配机制的长尾词义消歧方法. No.2022111313837.</div>
 	<div>贺瑞芳, <b>张俊伟</b>: 一种融合解耦表征的长尾词义消歧方法. No.2022112652797.</div>
+	<div>贺瑞芳, <b>张俊伟</b>: 一种适用于小样本的类量子表征学习方法. No.2022112652797.</div>
 </section>
 
 
