--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 
 <!--底部-->
 <footer>
-Copyright © Junwei Zhang &emsp; <i>Website: qnlp.github.io</i> &emsp; Email: junwei@tju.edu.cn
+Copyright: Junwei Zhang &emsp; <i>Website: qnlp.github.io</i> &emsp; Email: junwei@tju.edu.cn
 </footer>
 
 
