--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Junwei Zhang's Homepage</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <link rel="shortcut icon" href="https://qnlp.github.io/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="https://qnlp.github.io/main.css" type="text/css" >
+<link rel="stylesheet" href="./main.css" type="text/css" >
 <body>
 
 
@@ -16,29 +16,29 @@
 
 <!--个人简介-->
 <nav>Personal Information:</nav>
-<section id="Personal_Information">
+<section>
 Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer Science and Technology, College of Intelligence and Computing, Tianjin University, China. His current research interests include Quantum Machine Learning, Quantum Cognition and Natural Language Processing. In the past, he has published more than ten academic papers as the first author, obtained several patents, and was invited as a reviewer by AAAI, ECAI, etc.
 </section>
 
 
 <!--教育背景-->
 <nav>Education Experience:</nav>
-<section id="Education_Experience">
-	<div class="begin">2017.9 - Now:</div>
-	<div class="center">Ph.D student,</div>
-	<div class="end">Tianjin University, China.</div>
-	<div class="begin">2015.9 - 2017.6:</div>
-	<div class="center">Master,</div>
-	<div class="end">Harbin University of Commerce, China.</div>
-	<div class="begin">2009.9 - 2014.6:</div>
-	<div class="center">Bachelor,</div>
-	<div class="end">Tiangong University, China.</div>
+<section>
+	<div>2017.9 - Now:</div>
+	<div>Ph.D student,</div>
+	<div>Tianjin University, China.</div>
+	<div>2015.9 - 2017.6:</div>
+	<div>Master,</div>
+	<div>Harbin University of Commerce, China.</div>
+	<div>2009.9 - 2014.6:</div>
+	<div>Bachelor,</div>
+	<div>Tiangong University, China.</div>
 </section>
 
 
 <!--研究方向-->
 <nav>Research Interests:</nav>
-<section id="Research_Interests">
+<section>
 	<div>Quantum Machine Learning (QML)</div>
 	<div>Natural Language Processing (NLP)</div>
 	<div>Word Sense Disambiguation (WSD)</div>
@@ -47,13 +47,13 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 
 <!--会议论文-->
 <nav>Conference Papers:</nav>
-<section id="Conference_Papers">
+<section>
 	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo: <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> AAAI 2023: 1-9</div>
 	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, Jinsong Ma, Mengnan Xiao: <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> CIKM 2022: 2569-2579</div>
 	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo: <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML-PKDD 2022: 1-9</div>
 	<div><b>Junwei Zhang</b>, Zhao Li, Hao Peng, Ming Li, Xiaofen Wang: <a href="https://qnlp.github.io/papers/IJCNN2022(2).pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> IJCNN 2022: 1-8</div>
 	<div><b>Junwei Zhang</b>, Zhao Li, Jianmao Xiao, Ming Li: <a href="https://qnlp.github.io/papers/IJCNN2022(1).pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> IJCNN 2022: 1-8</div>
-	<div><b>Junwei Zhang</b>, Zhao Li, Juan Wang, Yinghui Wang, Shichang Hu, Jie Xiao, Zhaolin Li: <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> PAKDD 2022: 58-70</div>
+	<div><b>Junwei Zhang</b>, Zhao Li, Juan Wang, Yinghui Wang, Shichang Hu, Jie Xiao, Zhaolin Li: <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> PAKDD (2) 2022: 58-70</div>
 	<div><b>Junwei Zhang</b>, Zhao Li, Ruifang He, Ji Zhang, Biao Wang, Zhaolin Li, Tianyuan Niu: <a href="https://qnlp.github.io/papers/IJCNN2021(1).pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> IJCNN 2021: 1-7</div>
 	<div><b>Junwei Zhang</b>, Ruifang He, Zhao Li, Ji Zhang, Biao Wang, Zhaolin Li, Tianyuan Niu: <a href="https://qnlp.github.io/papers/IJCNN2021(2).pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> IJCNN 2021: 1-8</div>
 	<div><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, Long Zhang, Xia Chen: <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> ECAI 2020: 1650-1657</div>
@@ -64,14 +64,14 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 
 <!--期刊论文-->
 <nav>Journal Papers:</nav>
-<section id="Journal_Papers">
+<section>
 	<div><b>Junwei Zhang</b>, Zhao Li: <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics, 2020, 29(6): 1178-1184</div>
 </section>
 
 
 <!--专利-->
 <nav>Patents:</nav>
-<section id="Patents">
+<section>
 	<div>贺瑞芳, <b>张俊伟</b>: 一种融合定义与场景匹配机制的长尾词义消歧方法. No.2022111313837.</div>
 	<div>贺瑞芳, <b>张俊伟</b>: 一种融合解耦表征的长尾词义消歧方法. No.2022112652797.</div>
 	<div>贺瑞芳, <b>张俊伟</b>: 一种适用于小样本的类量子表征学习方法. No.2022112652797.</div>
@@ -80,7 +80,7 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 
 <!--底部-->
 <footer>
-Copyright © 2021 - All Rights Reserved - Junwei Zhang
+Copyright &copy; 2021 - All Rights Reserved - Junwei Zhang
 </footer>
 
 
