--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Junwei Zhang's Homepage</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 <link rel="shortcut icon" href="https://qnlp.github.io/favicon.ico" type="image/x-icon">
-<link rel="stylesheet" href="./main.css" type="text/css" >
+<link rel="stylesheet" href="https://qnlp.github.io/main.css" type="text/css" >
 <body>
 
 
