--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <!--会议论文-->
 <nav>Conference Papers:</nav>
 <section>
-	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo: <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> AAAI 2023: 1-9</div>
-	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, Jinsong Ma, Mengnan Xiao: <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> CIKM 2022: 2569-2579</div>
-	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo: <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML-PKDD 2022: 1-9</div>
-	<div><b>Junwei Zhang</b>, Zhao Li, Hao Peng, Ming Li, Xiaofen Wang: <a href="https://qnlp.github.io/papers/IJCNN2022(2).pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> IJCNN 2022: 1-8</div>
-	<div><b>Junwei Zhang</b>, Zhao Li, Jianmao Xiao, Ming Li: <a href="https://qnlp.github.io/papers/IJCNN2022(1).pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> IJCNN 2022: 1-8</div>
-	<div><b>Junwei Zhang</b>, Zhao Li, Juan Wang, Yinghui Wang, Shichang Hu, Jie Xiao, Zhaolin Li: <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> PAKDD 2022: 58-70</div>
-	<div><b>Junwei Zhang</b>, Zhao Li, Ruifang He, Ji Zhang, Biao Wang, Zhaolin Li, Tianyuan Niu: <a href="https://qnlp.github.io/papers/IJCNN2021(1).pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> IJCNN 2021: 1-7</div>
-	<div><b>Junwei Zhang</b>, Ruifang He, Zhao Li, Ji Zhang, Biao Wang, Zhaolin Li, Tianyuan Niu: <a href="https://qnlp.github.io/papers/IJCNN2021(2).pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> IJCNN 2021: 1-8</div>
-	<div><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, Long Zhang, Xia Chen: <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> ECAI 2020: 1650-1657</div>
-	<div>Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, Xiujun Gong, Panpan Wang, Yazhou Zhang: Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. ICTAI 2019: 1602-1606</div>
-	<div>Xiang Li, Zhigang Zhao, Dawei Song, Yazhou Zhang, Chunyang Niu, <b>Junwei Zhang</b>, Jidong Huo, Jing Li: Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. BIBM 2019: 684-687</div>
+	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo: <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> AAAI 2023.</div>
+	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, Jinsong Ma, Mengnan Xiao: <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> CIKM 2022.</div>
+	<div><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo: <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML-PKDD 2022.</div>
+	<div><b>Junwei Zhang</b>, Zhao Li, Hao Peng, Ming Li, Xiaofen Wang: <a href="https://qnlp.github.io/papers/IJCNN2022(2).pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> IJCNN 2022.</div>
+	<div><b>Junwei Zhang</b>, Zhao Li, Jianmao Xiao, Ming Li: <a href="https://qnlp.github.io/papers/IJCNN2022(1).pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> IJCNN 2022.</div>
+	<div><b>Junwei Zhang</b>, Zhao Li, Juan Wang, Yinghui Wang, Shichang Hu, Jie Xiao, Zhaolin Li: <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> PAKDD 2022.</div>
+	<div><b>Junwei Zhang</b>, Zhao Li, Ruifang He, Ji Zhang, Biao Wang, Zhaolin Li, Tianyuan Niu: <a href="https://qnlp.github.io/papers/IJCNN2021(1).pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> IJCNN 2021.</div>
+	<div><b>Junwei Zhang</b>, Ruifang He, Zhao Li, Ji Zhang, Biao Wang, Zhaolin Li, Tianyuan Niu: <a href="https://qnlp.github.io/papers/IJCNN2021(2).pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> IJCNN 2021.</div>
+	<div><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, Long Zhang, Xia Chen: <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> ECAI 2020.</div>
+	<div>Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, Xiujun Gong, Panpan Wang, Yazhou Zhang: Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. ICTAI 2019.</div>
+	<div>Xiang Li, Zhigang Zhao, Dawei Song, Yazhou Zhang, Chunyang Niu, <b>Junwei Zhang</b>, Jidong Huo, Jing Li: Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. BIBM 2019.</div>
 </section>
 
 
 <!--期刊论文-->
 <nav>Journal Papers:</nav>
 <section>
-	<div><b>Junwei Zhang</b>, Zhao Li: <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics, 2020, 29(6): 1178-1184</div>
+	<div><b>Junwei Zhang</b>, Zhao Li: <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> CJE 2020.</div>
 </section>
 
 
