--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <!--期刊论文-->
 <nav>Journal Papers:</nav>
 <section>
-	<div><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics, 2020, 29(6): 1178-1184</div>
+	<div><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
 </section>
 
 
 <!--专利-->
 <nav>Patents:</nav>
 <section>
-	<div>贺瑞芳, <b>张俊伟</b>: 一种融合定义与场景匹配机制的长尾词义消歧方法. No.2022111313837.</div>
-	<div>贺瑞芳, <b>张俊伟</b>: 一种融合解耦表征的长尾词义消歧方法. No.2022112652797.</div>
-	<div>贺瑞芳, <b>张俊伟</b>: 一种适用于小样本的类量子表征学习方法. No.2022112652797.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 申请人: 天津大学, 申请号: 202211131383.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 申请人: 天津大学, 申请号: 202211265279.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请人: 天津大学, 申请号: 202211265279.7.</div>
 </section>
 
 
