--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <section>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 申请人: 天津大学, 申请号: 202211131383.7.</div>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 申请人: 天津大学, 申请号: 202211265279.7.</div>
-	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请人: 天津大学, 申请号: 202211265279.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请人: 天津大学, 申请号: 2023100540795.</div>
 </section>
 
 
