--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 	<div data-level="CCF-C"><b>Junwei Zhang</b>, Ruifang He, Zhao Li, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> IJCNN, 2021: 1-8.</div>
 	<div data-level="CCF-B"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> ECAI, 2020: 1650-1657.</div>
 	<div data-level="CCF-C">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. ICTAI, 2019: 1602-1606.</div>
+	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signals guided Event Detection. DASFAA, 2023: 1-10.</div>
 	<div data-level="CCF-B">Xiang Li, Zhigang Zhao, Dawei Song, et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. BIBM, 2019: 684-687.</div>
 </section>
 
