--- a/index.html
+++ b/index.html
@@ -48,18 +48,18 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <!--会议论文-->
 <nav>Conference Papers:</nav>
 <section>
-	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> AAAI, 2023: 1-9.</div>
-	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> CIKM, 2022: 2569-2579.</div>
-	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> ECML-PKDD, 2022: 1-9.</div>
-	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Hao Peng, et al. <a href="https://qnlp.github.io/papers/IJCNN2022a.pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> IJCNN, 2022: 1-8.</div>
-	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Jianmao Xiao, et al. <a href="https://qnlp.github.io/papers/IJCNN2022b.pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> IJCNN, 2022: 1-8.</div>
-	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Juan Wang, et al. <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> PAKDD, 2022: 58-70.</div>
-	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Ruifang He, et al. <a href="https://qnlp.github.io/papers/IJCNN2021a.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> IJCNN, 2021: 1-7.</div>
-	<div data-level="CCF-C"><b>Junwei Zhang</b>, Ruifang He, Zhao Li, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> IJCNN, 2021: 1-8.</div>
-	<div data-level="CCF-B"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> ECAI, 2020: 1650-1657.</div>
-	<div data-level="CCF-C">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. ICTAI, 2019: 1602-1606.</div>
-	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signals guided Event Detection. DASFAA, 2023: 1-10.</div>
-	<div data-level="CCF-B">Xiang Li, Zhigang Zhao, Dawei Song, et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. BIBM, 2019: 684-687.</div>
+	<div data-level="CCF-A"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/AAAI2023.pdf" download>Quantum-inspired Representation for Long-tail Senses of Word Sense Disambiguation.</a> In AAAI, 2023: 1-9.</div>
+	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo, et al. <a href="https://qnlp.github.io/papers/CIKM2022.pdf" download>Disentangled Representation for Long-tail Senses of Word Sense Disambiguation.</a> In CIKM, 2022: 2569-2579.</div>
+	<div data-level="CCF-B"><b>Junwei Zhang</b>, Ruifang He, Fengyu Guo. <a href="https://qnlp.github.io/papers/ECMLPKDD2022.pdf" download>Bi-matching Mechanism to Combat Long-tail Senses of Word Sense Disambiguation.</a> In ECML-PKDD, 2022: 1-9.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Hao Peng, et al. <a href="https://qnlp.github.io/papers/IJCNN2022a.pdf" download>Feedforward Neural Network Reconstructed from High-order Quantum Systems.</a> In IJCNN, 2022: 1-8.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Jianmao Xiao, et al. <a href="https://qnlp.github.io/papers/IJCNN2022b.pdf" download>Neural Network Model Reconstructed from Entangled Quantum States.</a> In IJCNN, 2022: 1-8.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Juan Wang, et al. <a href="https://qnlp.github.io/papers/PAKDD2022.pdf" download>Quantum Entanglement Inspired Correlation Learning for Classification.</a> In PAKDD, 2022: 58-70.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Zhao Li, Ruifang He, et al. <a href="https://qnlp.github.io/papers/IJCNN2021a.pdf" download>Interactive Quantum Classifier Inspired by Quantum Open System Theory.</a> In IJCNN, 2021: 1-7.</div>
+	<div data-level="CCF-C"><b>Junwei Zhang</b>, Ruifang He, Zhao Li, et al. <a href="https://qnlp.github.io/papers/IJCNN2021b.pdf" download>Quantum Correlation Revealed by Bell State for Classification Tasks.</a> In IJCNN, 2021: 1-8.</div>
+	<div data-level="CCF-B"><b>Junwei Zhang</b>, Yuexian Hou, Zhao Li, et al. <a href="https://qnlp.github.io/papers/ECAI2020.pdf" download>Strong Statistical Correlation Revealed by Quantum Entanglement for Supervised Learning.</a> In ECAI, 2020: 1650-1657.</div>
+	<div data-level="CCF-C">Peng Guo, <b>Junwei Zhang</b>, Yuexian Hou, et al. Quantum-inspired DMATT-BiGRU for Conversational Sentiment Analysis. In ICTAI, 2019: 1602-1606.</div>
+	<div data-level="CCF-B">Mengnan Xiao, Ruifang He, <b>Junwei Zhang</b>, et al. Unleashing Pre-trained Masked Language Model Knowledge for Label Signals guided Event Detection. In DASFAA, 2023: 1-10.</div>
+	<div data-level="CCF-B">Xiang Li, Zhigang Zhao, Dawei Song, et al. Variational Autoencoder based Latent Factor Decoding of Multichannel EEG for Emotion Recognition. In BIBM, 2019: 684-687.</div>
 </section>
 
 
@@ -73,9 +73,9 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <!--专利-->
 <nav>Patents:</nav>
 <section>
-	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 申请人: 天津大学, 申请号: 202211131383.7.</div>
-	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 申请人: 天津大学, 申请号: 202211265279.7.</div>
-	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请人: 天津大学, 申请号: 2023100540795.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 申请人: 天津大学, 申请号: CN202211131383.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 申请人: 天津大学, 申请号: CN202211265279.7.</div>
+	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请人: 天津大学, 申请号: CN2023100540795.</div>
 </section>
 
 
