--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <!--期刊论文-->
 <nav>Journal Papers:</nav>
 <section>
-	<div data-level="SCI-4"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
+	<div data-level="SCI-4, CCF-T1"><b>Junwei Zhang</b>, Zhao Li. <a href="https://qnlp.github.io/papers/CJE2020.pdf" download>Quantum Contextuality for Training Neural Networks.</a> Chinese Journal of Electronics (CJE), 2020, 29(6): 1178-1184.</div>
 </section>
 
 
