--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <!--教育背景-->
 <nav>Education Experience:</nav>
 <section>
-	<div>2017.09 - Now:</div>
+	<div>2017.09 - 2023.06:</div>
 	<div>Ph.D student,</div>
 	<div>Tianjin University, China.</div>
 	<div>2015.09 - 2017.06:</div>
