--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer 
 <nav>Education Experience:</nav>
 <section>
 	<div>2017.09 - 2023.06:</div>
-	<div>Ph.D student,</div>
+	<div>Ph.D,</div>
 	<div>Tianjin University, China.</div>
 	<div>2015.09 - 2017.06:</div>
 	<div>Master,</div>
