--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <!--个人简介-->
 <nav>Personal Information:</nav>
 <section>
-Junwei Zhang, male, born in March 1989, is a Ph.D student at School of Computer Science and Technology, College of Intelligence and Computing, Tianjin University, China. His current research interests include Quantum Machine Learning, Quantum Cognition and Natural Language Processing. In the past, he has published more than ten academic papers as the first author, obtained several patents, and was invited as a reviewer by AAAI, ECAI, etc.
+Junwei Zhang, male, born in March 1989, is a Ph.D at School of Computer Science and Technology, College of Intelligence and Computing, Tianjin University, China. His current research interests include Quantum Machine Learning, Quantum Cognition and Natural Language Processing. In the past, he has published more than ten academic papers as the first author, obtained several patents, and was invited as a reviewer by AAAI, ECAI, etc.
 </section>
 
 
