--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@ Junwei Zhang, male, born in March 1989, is a Ph.D at School of Computer Science 
 </section>
 
 
+<!--工作经历-->
+<nav>Work Experience:</nav>
+<section>
+	<div>2023.09 - now:</div>
+	<div>Assistant Researcher</div>
+	<div>Basic Medical and Oncology, Chinese Academy of Sciences.</div>
+</section>
+
+	
 <!--教育背景-->
 <nav>Education Experience:</nav>
 <section>
