--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Junwei Zhang, male, born in March 1989, is an assistant researcher at Center for
 <nav>Work Experience:</nav>
 <section>
 	<div>2023.09 - now:</div>
-	<div>Assistant Researcher</div>
+	<div>Assistant Researcher,</div>
 	<div>Institute of Basic Medical and Oncology, Chinese Academy of Sciences.</div>
 </section>
 
