--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 <section>
 	<div>Quantum Machine Learning (QML)</div>
 	<div>Natural Language Processing (NLP)</div>
-	<div>Computational Biology & Bioinformatics</div>
+	<div>Bioinformatics and Computational Biology (BCB)</div>
 </section>
 
 
