--- a/index.html
+++ b/index.html
@@ -79,14 +79,21 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 </section>
 
 
-<!--专利-->
-<nav>Patents:</nav>
+<!--发明专利-->
+<nav>Invention Patents:</nav>
 <section>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合定义与场景匹配机制的长尾词义消歧方法. 申请人: 天津大学, 申请号: CN202211131383.7.</div>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种融合解耦表征的长尾词义消歧方法. 申请人: 天津大学, 申请号: CN202211265279.7.</div>
 	<div>贺瑞芳, <b>张俊伟</b>. 一种适用于小样本的类量子表征学习方法. 申请人: 天津大学, 申请号: CN2023100540795.</div>
 </section>
 
+
+<!--软件著作权-->
+<nav>Software Copyright:</nav>
+<section>
+
+</section>
+	
 
 <!--底部-->
 <footer>
