--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Junwei Zhang is an assistant researcher at Center for Artificial Intelligence an
 
 
 <!--软件著作权-->
-<nav>Software Copyright:</nav>
+<nav>Software Copyrights:</nav>
 <section>
 
 </section>
